kubernetes/apps/prod/monitoring/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_PROMETHEUS}.${DOMAIN}"
    gethomepage.dev/description: Metrics monitoring solution.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/name: Prometheus
    gethomepage.dev/app: prometheus
    gethomepage.dev/widget.type: prometheus
    gethomepage.dev/widget.url: "https://${HOST_PROMETHEUS}.${DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_PROMETHEUS}.${DOMAIN}`)
      services:
        - kind: Service
          name: prometheus-operated
          namespace: monitoring
          port: 9090
  tls:
    secretName: prometheus.${DOMAIN}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-alertmanager
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_ALERTS}.${DOMAIN}"
    gethomepage.dev/description: Alerts monitoring solution.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/name: Alert Manager
    gethomepage.dev/app: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_ALERTS}.${DOMAIN}`)
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: monitoring
          port: 9093
  tls:
    secretName: alerts.${DOMAIN}
